traducePYJA/grammarPyJaParser.py
# Generated from grammarPyJa.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarPyJaParser ( Parser ):

    grammarFileName = "grammarPyJa.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'return'", "'print'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "','", "':'", 
                     "'*'", "'-'", "'='" ]

    symbolicNames = [ "<INVALID>", "DEF", "RETURN", "PRINT", "IDENTIFIER", 
                      "NUMBER", "WS", "LPAREN", "RPAREN", "COMMA", "COLON", 
                      "ASTERISK", "MINUS", "ASSIGN" ]

    RULE_program = 0
    RULE_functionDefinition = 1
    RULE_parameters = 2
    RULE_statement = 3
    RULE_assignment = 4
    RULE_expression = 5
    RULE_functionCall = 6
    RULE_arguments = 7
    RULE_printStatement = 8

    ruleNames =  [ "program", "functionDefinition", "parameters", "statement", 
                   "assignment", "expression", "functionCall", "arguments", 
                   "printStatement" ]

    EOF = Token.EOF
    DEF=1
    RETURN=2
    PRINT=3
    IDENTIFIER=4
    NUMBER=5
    WS=6
    LPAREN=7
    RPAREN=8
    COMMA=9
    COLON=10
    ASTERISK=11
    MINUS=12
    ASSIGN=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.FunctionDefinitionContext,i)


        def printStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.PrintStatementContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.PrintStatementContext,i)


        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.AssignmentContext,i)


        def getRuleIndex(self):
            return grammarPyJaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = grammarPyJaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 26) != 0):
                self.state = 21
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 18
                    self.functionDefinition()
                    pass
                elif token in [3]:
                    self.state = 19
                    self.printStatement()
                    pass
                elif token in [4]:
                    self.state = 20
                    self.assignment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(grammarPyJaParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(grammarPyJaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(grammarPyJaParser.LPAREN, 0)

        def parameters(self):
            return self.getTypedRuleContext(grammarPyJaParser.ParametersContext,0)


        def RPAREN(self):
            return self.getToken(grammarPyJaParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(grammarPyJaParser.COLON, 0)

        def RETURN(self):
            return self.getToken(grammarPyJaParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarPyJaParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.StatementContext,i)


        def getRuleIndex(self):
            return grammarPyJaParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)




    def functionDefinition(self):

        localctx = grammarPyJaParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(grammarPyJaParser.DEF)
            self.state = 27
            self.match(grammarPyJaParser.IDENTIFIER)
            self.state = 28
            self.match(grammarPyJaParser.LPAREN)
            self.state = 29
            self.parameters()
            self.state = 30
            self.match(grammarPyJaParser.RPAREN)
            self.state = 31
            self.match(grammarPyJaParser.COLON)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.statement()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==3 or _la==4):
                    break

            self.state = 37
            self.match(grammarPyJaParser.RETURN)
            self.state = 38
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(grammarPyJaParser.IDENTIFIER)
            else:
                return self.getToken(grammarPyJaParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarPyJaParser.COMMA)
            else:
                return self.getToken(grammarPyJaParser.COMMA, i)

        def getRuleIndex(self):
            return grammarPyJaParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = grammarPyJaParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(grammarPyJaParser.IDENTIFIER)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 41
                self.match(grammarPyJaParser.COMMA)
                self.state = 42
                self.match(grammarPyJaParser.IDENTIFIER)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(grammarPyJaParser.AssignmentContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(grammarPyJaParser.PrintStatementContext,0)


        def getRuleIndex(self):
            return grammarPyJaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = grammarPyJaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.assignment()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.printStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarPyJaParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(grammarPyJaParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarPyJaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return grammarPyJaParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = grammarPyJaParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(grammarPyJaParser.IDENTIFIER)
            self.state = 53
            self.match(grammarPyJaParser.ASSIGN)
            self.state = 54
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarPyJaParser.IDENTIFIER, 0)

        def NUMBER(self):
            return self.getToken(grammarPyJaParser.NUMBER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.ExpressionContext,i)


        def ASTERISK(self):
            return self.getToken(grammarPyJaParser.ASTERISK, 0)

        def MINUS(self):
            return self.getToken(grammarPyJaParser.MINUS, 0)

        def getRuleIndex(self):
            return grammarPyJaParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = grammarPyJaParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.state = 57
                self.match(grammarPyJaParser.IDENTIFIER)
                pass
            elif token in [5]:
                self.state = 58
                self.match(grammarPyJaParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 67
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = grammarPyJaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 61
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 62
                        self.match(grammarPyJaParser.ASTERISK)
                        self.state = 63
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = grammarPyJaParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 64
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 65
                        self.match(grammarPyJaParser.MINUS)
                        self.state = 66
                        self.expression(4)
                        pass

             
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FunctionCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(grammarPyJaParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(grammarPyJaParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(grammarPyJaParser.RPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(grammarPyJaParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return grammarPyJaParser.RULE_functionCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)




    def functionCall(self):

        localctx = grammarPyJaParser.FunctionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(grammarPyJaParser.IDENTIFIER)
            self.state = 73
            self.match(grammarPyJaParser.LPAREN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4 or _la==5:
                self.state = 74
                self.arguments()


            self.state = 77
            self.match(grammarPyJaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarPyJaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(grammarPyJaParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(grammarPyJaParser.COMMA)
            else:
                return self.getToken(grammarPyJaParser.COMMA, i)

        def getRuleIndex(self):
            return grammarPyJaParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)




    def arguments(self):

        localctx = grammarPyJaParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.expression(0)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 80
                self.match(grammarPyJaParser.COMMA)
                self.state = 81
                self.expression(0)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(grammarPyJaParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(grammarPyJaParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(grammarPyJaParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(grammarPyJaParser.RPAREN, 0)

        def getRuleIndex(self):
            return grammarPyJaParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = grammarPyJaParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(grammarPyJaParser.PRINT)
            self.state = 88
            self.match(grammarPyJaParser.LPAREN)
            self.state = 89
            self.expression(0)
            self.state = 90
            self.match(grammarPyJaParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[5] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         




